--- a/frontend/src/views/MirrorAi.css
+++ b/frontend/src/views/MirrorAi.css
@@ -8,7 +8,10 @@
   color: #fff;
   font-family: "Cinzel Decorative", serif;
   position: relative;
+  padding-top: 10%; 
+  box-sizing: border-box;
 }
+
 
 /* Magical floating particles */
 .mirror-page::before {
