--- a/frontend/src/views/happymemories.css
+++ b/frontend/src/views/happymemories.css
@@ -3,7 +3,7 @@
   background: linear-gradient(180deg, #1a1a40, #004d40);
   color: white;
   text-align: center;
-  padding: 40px;
+  padding: 10%;
   overflow: hidden;
   position: relative;
 }
